--- a/public/gameold.html
+++ b/public/gameold.html
@@ -10,7 +10,10 @@
     <div id="startPage">
         <div>gul bolle</div>
     </div>
+
+    <script type="text/javascript" src="/utils.js"></script>
+    <script src="/code.js"></script>
 </body>
-<script src="/code.js"></script>
+
 </html>
 
